dnl Process this file with autoconf to produce a configure script.
AC_INIT(metaserver.cc)
AM_INIT_AUTOMAKE(metaserver, 1.1)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX

dnl Checks for libraries.
dnl Replace `main' with a function in -lgnugetopt:
AC_CHECK_LIB(gnugetopt, getopt_long)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(syslog.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_PID_T
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_TYPE_SIGNAL
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(socket strerror)

AC_OUTPUT(Makefile TestServer/Makefile TestClient/Makefile )
