dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/metaserver_main.cpp)
AM_INIT_AUTOMAKE(metaserver, 1.9)

dnl create a config.h
AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX

dnl Checks for libraries.
dnl Replace `main' with a function in -lgnugetopt:
AC_CHECK_HEADERS(getopt.h)
AC_CHECK_LIB(gnugetopt, getopt_long)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(syslog.h unistd.h features.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_PID_T
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_TYPE_SIGNAL
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(socket strerror inet_ntop inet_aton)
AC_CHECK_LIB(socket, socket)
AC_CHECK_LIB(nsl, inet_ntop)
AC_CHECK_LIB(resolv, inet_aton)

AC_OUTPUT(Makefile src/Makefile TestServer/Makefile TestClient/Makefile )
