bin_PROGRAMS = metaserver

noinst_HEADERS =\
 mainloop.hh protocol_instructions.h netmsg.hh wrapunix.hh

metaserver_SOURCES =\
 clientshakemsg.cpp handshakemsg.cpp listrequestmsg.cpp listresponsemsg.cpp \
 metaserver.cpp metaserver_main.cpp netmsg.cpp serverkeepalivemsg.cpp \
 servershakemsg.cpp sigalrmhandler.cpp siginthandler.cpp signalmanager.cpp \
 terminatemsg.cpp wrapunix.cpp

