INCLUDES = -I$(top_builddir)

bin_PROGRAMS = metaserver

noinst_HEADERS =\
 protocol_instructions.h clientshakemsg.hh handshake.hh handshakemsg.hh \
 listrequestmsg.hh listresponsemsg.hh metaserver.hh \
 netmsg.hh serverkeepalivemsg.hh servershakemsg.hh sigalrmhandler.hh \
 siginthandler.hh signalhandler.hh signalmanager.hh terminatemsg.hh \
 wrapunix.hh metaserver_version.h

metaserver_SOURCES =\
 clientshakemsg.cpp handshakemsg.cpp listrequestmsg.cpp listresponsemsg.cpp \
 metaserver.cpp metaserver_main.cpp netmsg.cpp serverkeepalivemsg.cpp \
 servershakemsg.cpp sigalrmhandler.cpp siginthandler.cpp signalmanager.cpp \
 terminatemsg.cpp wrapunix.cpp

